# Cs2-vibemod

./: ARCHITECTURE.md  CMakeLists.txt  README.md
src/dll/: lua_engine.cpp  lua_engine.hpp  main.cpp
src/editor/: ai_backend.cpp  ai_backend.hpp  main.cpp  pipe_client.cpp  pipe_client.hpp
src/injector/: injector.cpp  injector.hpp  main.cpp
src/shared/: memory.hpp  pipe_comm.cpp  pipe_comm.hpp
